<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <!-- Логотип приложения -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            />

        <!-- Заголовок -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/label_emailpassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <!-- Статус -->
        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Status: Signed Out"
            android:gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <!-- Детали пользователя -->
        <TextView
            android:id="@+id/detailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="User ID: null"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <!-- Поля для ввода Email и Пароля -->
        <LinearLayout
            android:id="@+id/emailPasswordFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/fieldEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/fieldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="12dp"/>
        </LinearLayout>

        <!-- Кнопки для входа и регистрации -->
        <LinearLayout
            android:id="@+id/emailPasswordButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/emailSignInButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/emailCreateAccountButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:textColor="@android:color/white"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- Кнопки для выхода и верификации -->
        <LinearLayout
            android:id="@+id/signedInButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:visibility="gone"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_out"
                android:textColor="@android:color/white"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/verifyEmailButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/verify_email"
                android:textColor="@android:color/white"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>