<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="Profile" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/mireaInfo"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="Mirea Info" />
        <item
            android:id="@+id/mireaSite"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="Mirea Site" />
        <item
            android:id="@+id/gimn"
            android:icon="@android:drawable/ic_media_play"
            android:title="Music" />
        <item
            android:id="@+id/barometr"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="Baromentr" />
        <item
            android:id="@+id/camera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="CameraApp" />
        <item
            android:id="@+id/audio"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="Voice recorder" />
        <item
            android:id="@+id/changer"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="FileChanger" />
    </group>
</menu>